fix style error of white space below footer on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -664,7 +664,6 @@ footer p {
 /* making a sticky footer with flex -> whole body is a flexbox in column direction */
 .footer {
     flex-shrink: 0;
-    padding: 20px;
 }
 
 .content {
